k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow-ns
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 3000
